# automated-ken

./: .gitignore  GETTING_STARTED.md  README.md  SPEC.md
snap-dashboard/: README.md  pyproject.toml  requirements.txt
snap-dashboard/snap/: snapcraft.yaml
snap-dashboard/snap/hooks/: configure
snap-dashboard/src/snap_dashboard/: __init__.py  auth.py  cli.py  collector.py  config.py
snap-dashboard/src/snap_dashboard/db/: __init__.py  models.py  session.py
snap-dashboard/src/snap_dashboard/github/: __init__.py  client.py  pr_viewer.py
snap-dashboard/src/snap_dashboard/store/: __init__.py  client.py
snap-dashboard/src/snap_dashboard/testing/: __init__.py  orchestrator.py  promoter.py  workflow_template.py
snap-dashboard/src/snap_dashboard/web/: __init__.py  app.py
snap-dashboard/src/snap_dashboard/web/routes/: __init__.py  admin.py  auth.py  dashboard.py  docs.py  onboarding.py  settings.py  snaps.py  testing.py
snap-dashboard/src/snap_dashboard/web/static/: app.js  style.css
snap-dashboard/src/snap_dashboard/web/templates/: admin.html  base.html  dashboard.html  docs.html  login.html  onboarding.html  pr_detail.html  settings.html  snap_add.html  snap_detail.html  testing.html
